welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:28: error: expected start of definition
	override def forward()  {
                 ^ZigZag:31: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:34: error: expected start of definition
	override def backward() {
                 ^ZigZag:37: error: Unmatched closing brace '}' ignored here
}
^